src/section-row/style.scss
@import "../styles/variables";
@import "../styles/spacing";

// The class name needs to match the names of the category and block
.wp-block-cloudblocks-section-row {
  // max-width: $content-width;
  margin-left: auto;
  margin-right: auto;
  margin-top: 0;
  margin-bottom: 0;
  position: relative;

  &[class*="justify-content-"] {
    display: flex;
    flex-direction: column;
  }

  &.justify-content-center {
    justify-content: center;
  }
  
  &.justify-content-flex-start {
    justify-content: flex-start;
  }

  &.justify-content-flex-end {
    justify-content: flex-end;
  }

  .background-color,
  .background-image {
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    z-index: -1;
  }

  &.height-one-third {
    min-height: 33.33vh;
  }

  &.height-half {
    min-height: 50vh;
  }

  &.height-two-third {
    min-height: 66.66vh;
  }

  &.height-full {
    min-height: 100vh;
  }
}

